[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
# Use the categories from https://crates.io/categories
# categories = ["category-name"]
description = "CroftSoft Library for Roles"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
keywords = ["roles"]
license = "MIT"
name = "com-croftsoft-lib-role"
publish = true
readme = "README.md"
repository = "https://github.com/david-wallace-croft/com-croftsoft-lib-role"
rust-version = "1.56.1"
version = "0.5.2-SNAPSHOT"

[dependencies]
# No dependencies
